Commit comment in simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+
 <!--
 	Copyright 2014 Git.Training
+	Adding more comments to try something on my own
 >
+
 <head>
 	<title>An Example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
