mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 
 <!--
 	Copyright 2014 Git.Training
-	Adding more comments to try something on my own
+	Adding changes before rebasing conflicts.
 >
 
 <head>
