--- a/simple.html
+++ b/simple.html
@@ -2,11 +2,11 @@
 
 <!--
 	Copyright 2014 Git.Training
-	Some silly changes from master branch
+	Adding changes before rebasing conflicts.
 >
 
 <head>
-	<title>Silly Changes on Master</title>
+	<title>Lots of Trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,14 +18,11 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Junk Filler Content -->
+	<!-- Content Goes Here -->
 		<p>
-			Just stuff for now,
-			Not sure if we should replace this or not
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; J Streger 2014</p>
 	</footer>
 </body>
 </html>
